Added to footers to gen

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
     <meta name="desciption" content="About page">
     <meta name="author" content="Claudio Surmon">
 
-    <title>Document</title>
+    <title>Suzzi - Home</title>
 </head>
 
 <body onload="insertElements(1)">
@@ -63,11 +63,7 @@
         </p>
     </main>
 
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer></footer>
 
 </body>
 
