--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -78,11 +78,7 @@
 
         <a href="blog2.html"> &#129070</a>
     </footer>
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer> </footer>
 </body>
 
 </html>
