--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -60,11 +60,7 @@
         <a href="blog1.html"> &#129068</a>
         <a href="blog3.html"> &#129070</a>
     </footer>
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
