--- a/blogs/index.html
+++ b/blogs/index.html
@@ -11,7 +11,7 @@
     <meta name="desciption" content="Blog index page">
     <meta name="author" content="Claudio Surmon">
 
-    <title>Document</title>
+    <title>Suzzi - Blogs</title>
 </head>
 
 
@@ -21,8 +21,6 @@
     <header></header>
 
     <nav></nav>
-
-
 
     <main class="gridContainer">
         <a class="card" href="blog1.html">
@@ -93,11 +91,7 @@
         </a>
     </main>
 
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer></footer>
 
 </body>
 
