--- a/construction/index.html
+++ b/construction/index.html
@@ -11,7 +11,7 @@
     <meta name="desciption" content="Plans for website page">
     <meta name="author" content="Claudio Surmon">
 
-    <title>Construction Zone</title>
+    <title>Suzzi - Construction Zone</title>
 </head>
 
 <body onload="insertElements(4)">
@@ -106,11 +106,7 @@
 
     </main>
 
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer></footer>
 
 </body>
 
