--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
     <meta name="desciption" content="Contact page">
     <meta name="author" content="Claudio Surmon">
 
-    <title>Contact Me</title>
+    <title>Suzzi - Contact Me</title>
 </head>
 
 <body onload="insertElements(3)">
@@ -39,9 +39,6 @@
     </main>
 
     <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
     </footer>
 
 </body>
