--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -42,11 +42,7 @@
         <a href="blog2.html"> &#129068</a>
         <a href="blog4.html"> &#129070</a>
     </footer>
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer> </footer>
 </body>
 
 </html>
