--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -47,11 +47,7 @@
         <a href="blog3.html"> &#129068</a>
         <a href="blog5.html"> &#129070</a>
     </footer>
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer> </footer>
 </body>
 
 </html>
