--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -62,11 +62,7 @@
         <a href="blog4.html"> &#129068</a>
         <a href="blog6.html"> &#129070</a>
     </footer>
-    <footer>
-        <p>
-            Copyright &copy; 2020 Suzzi Inc. Ltd.
-        </p>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
