Added to 4 blank blogs

--- a/about/index.html
+++ b/about/index.html
@@ -53,9 +53,14 @@
             primarily participating. This left Giovanni stranded halfway across the world.
         </p>
         <p>
+            During this time he met the love of his life,
+        </p>
+        <p>
             Not one to take a fight laying down, he began exploring the various industries in South Africa, eventually
             settling into the Computer Industry around 2000, where he has been ever since. Primarily working
-            backend-developmental software engineering jobs.
+            backend-developmental software engineering jobs. His military background helping land him jobs, from his
+            discipline allowing him to work harder than the average person, to incredible leadership skills. However,
+            his regimented mindset made it difficult to adapt to change on grand scales.
         </p>
         <p>
             Eventually he went on to produce his own software engineering company and has recently began web
