--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -125,7 +125,7 @@
     </article>
     <footer>
         <a href="blog5.html"> &#129068</a>
-
+        <a href="blog7.html"> &#129070</a>
     </footer>
     <footer></footer>
 </body>
