--- a/blogs/index.html
+++ b/blogs/index.html
@@ -89,6 +89,50 @@
                 </p>
             </div>
         </a>
+        <a class="card" href="blog7.html">
+            <img src="../images/PlaceHolder.png" alt="avatar">
+            <div class="container">
+                <h2>
+                    PlaceHolder
+                </h2>
+                <p>
+                    Lorem ipsum blah blah fish paste...
+                </p>
+            </div>
+        </a>
+        <a class="card" href="blog8.html">
+            <img src="../images/PlaceHolder.png" alt="avatar">
+            <div class="container">
+                <h2>
+                    PlaceHolder
+                </h2>
+                <p>
+                    Lorem ipsum blah blah fish paste...
+                </p>
+            </div>
+        </a>
+        <a class="card" href="blog9.html">
+            <img src="../images/PlaceHolder.png" alt="avatar">
+            <div class="container">
+                <h2>
+                    PlaceHolder
+                </h2>
+                <p>
+                    Lorem ipsum blah blah fish paste...
+                </p>
+            </div>
+        </a>
+        <a class="card" href="blog10.html">
+            <img src="../images/PlaceHolder.png" alt="avatar">
+            <div class="container">
+                <h2>
+                    PlaceHolder
+                </h2>
+                <p>
+                    Lorem ipsum blah blah fish paste...
+                </p>
+            </div>
+        </a>
     </main>
 
     <footer></footer>
