--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -36,8 +36,8 @@
         </p>
     </article>
     <footer>
-
-        <a href="blog2.html"> &#129070</a>
+        <a href="blog9.html"> &#129068</a>
+        <!--<a href="blog11.html"> &#129070</a>-->
     </footer>
     <footer> </footer>
 </body>
