Added scroll to top smoothly buttons

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
@@ -76,6 +76,7 @@
     </article>
     <footer>
 
+        <a href="#top">&#129069</a>
         <a href="blog2.html"> &#129070</a>
     </footer>
     <footer> </footer>
