--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
@@ -58,6 +58,8 @@
     </article>
     <footer>
         <a href="blog1.html"> &#129068</a>
+
+        <a href="#top">&#129069</a>
         <a href="blog3.html"> &#129070</a>
     </footer>
     <footer></footer>
