--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
@@ -125,6 +125,7 @@
     </article>
     <footer>
         <a href="blog5.html"> &#129068</a>
+        <a href="#top">&#129069</a>
         <a href="blog7.html"> &#129070</a>
     </footer>
     <footer></footer>
