--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
@@ -37,6 +37,7 @@
     </article>
     <footer>
         <a href="blog8.html"> &#129068</a>
+        <a href="#top">&#129069</a>
         <a href="blog10.html"> &#129070</a>
     </footer>
     <footer> </footer>
