--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
@@ -40,6 +40,7 @@
     </article>
     <footer>
         <a href="blog2.html"> &#129068</a>
+        <a href="#top">&#129069</a>
         <a href="blog4.html"> &#129070</a>
     </footer>
     <footer> </footer>
