Generate Navigation buttons for blogs

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -74,11 +74,7 @@
             V. Bush, “As we may think,” The Atlantic, pp. 1-10, 1945.
         </p>
     </article>
-    <footer>
-
-        <a href="#top">&#129069</a>
-        <a href="blog2.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer> </footer>
 </body>
 
