--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -43,11 +43,7 @@
 
         </p>
     </article>
-    <footer>
-        <a href="blog3.html"> &#129068</a>
-        <a href="#top">&#129069</a>
-        <a href="blog5.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer> </footer>
 </body>
 
