--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -58,11 +58,7 @@
             software would enter (0,0) into the geolocation metatag erroneously
         </p>
     </article>
-    <footer>
-        <a href="blog4.html"> &#129068</a>
-        <a href="#top">&#129069</a>
-        <a href="blog6.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer></footer>
 </body>
 
