--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -13,7 +13,7 @@
     </title>
 </head>
 
-<body onload="insertElements(2)">
+<body onload="insertElements(2,true)">
 
     <header></header>
     <nav></nav>
@@ -123,11 +123,7 @@
 
         </p>
     </article>
-    <footer>
-        <a href="blog5.html"> &#129068</a>
-        <a href="#top">&#129069</a>
-        <a href="blog7.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer></footer>
 </body>
 
