--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -35,11 +35,7 @@
             Text
         </p>
     </article>
-    <footer>
-        <a href="blog9.html"> &#129068</a>
-        <a href="#top">&#129069</a>
-        <!--<a href="blog11.html"> &#129070</a>-->
-    </footer>
+    <nav class="blogNav"></nav>
     <footer> </footer>
 </body>
 
