--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -56,12 +56,7 @@
 
         </p>
     </article>
-    <footer>
-        <a href="blog1.html"> &#129068</a>
-
-        <a href="#top">&#129069</a>
-        <a href="blog3.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer></footer>
 </body>
 
