--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -38,11 +38,7 @@
 
         </p>
     </article>
-    <footer>
-        <a href="blog2.html"> &#129068</a>
-        <a href="#top">&#129069</a>
-        <a href="blog4.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer> </footer>
 </body>
 
