--- a/blogs/blog8.html
+++ b/blogs/blog8.html
@@ -35,12 +35,7 @@
             Text
         </p>
     </article>
-    <footer>
-        <a href="blog7.html"> &#129068</a>
-
-        <a href="#top">&#129069</a>
-        <a href="blog9.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer> </footer>
 </body>
 
