--- a/blogs/blog7.html
+++ b/blogs/blog7.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Title
+        Giovanni's Company during the Outbreak
     </title>
 </head>
 
@@ -23,7 +23,7 @@
             Title
         </h1>
         <p>
-            by Claudio Surmon
+            by Giovanni Suzzi
         </p>
         <figure>
             <img src="" alt="Blank">
