--- a/contact/index.html
+++ b/contact/index.html
@@ -23,12 +23,10 @@
 
         <h1>Contact Me</h1>
 
-
-
         <h2>
             General Inquires
         </h2>
-        <p style="text-align: center;">
+        <p style="text-align: center; font-size: 1.25em;">
             &#9743; 011-123-1234
             </br>
             &#9990; 079-076-1254
