--- a/blogs/index.html
+++ b/blogs/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="../css/stylesheet.css" rel="stylesheet">
-    <script src="/WSOA3028A_1830290/js/nav.js"></script>
+    <script src="../js/nav.js"></script>
     <script src="../js/cardpage.js"></script>
 
     <meta name="desciption" content="Blog index page">
@@ -18,7 +18,7 @@
 
 
 
-<body onload="generateCards()">
+<body onload="insertElements(2)">
     <header></header>
 
     <nav></nav>
