--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Title
+        Interacting with Interactivity
     </title>
 </head>
 
@@ -20,19 +20,54 @@
     <nav></nav>
     <article>
         <h1>
-            Title
+            Interacting with Interactivity
         </h1>
         <p>
             by Claudio Surmon
         </p>
         <figure>
-            <img src="" alt="Blank">
+            <img src="../images/person-using-laptop-computer.jpg" alt="Person using Computer" width="800px">
             <figcaption>
-                Blank
+                Image from picjumbo.com - Free to use
             </figcaption>
         </figure>
         <p>
-            Text
+            Interactivity as defined by the Oxford dictionary is "Any communication between two or more individuals that
+            is dynamically shaped by the participants of the exchange", however in relation to computers and the web at
+            large, interactivity refers more to the dialog that is exchanged between a user (human) and a computer. The
+            range of interactivity a program can have is vast, from the high end with video games, down to the low end
+            with business applications.<br>
+
+        </p>
+        <h2>Web Design</h2>
+        <p>
+            Interactivity is a very important element in web-design (without it websites would not work). However,
+            elevated amounts of it can make the user-experience better and more engaging, encouraging uses to not only
+            stay longer but return later.<br>
+        </p>
+        <h2>
+            Gamification
+        </h2>
+        <p>
+            Interactivity allows for the user to be more engaged with the task they have at hand. This can clearly seen
+            in the addictive nature of video games and the dopamine kicks they give, however the principles that keep
+            people glued to their games are being used in other fields aswell.<br>
+            In recent years, companies have realised that the use of game techniques in their non-game applications and
+            marketing
+            can be a powerful tool. By implementing features that promote interactivity (such as point scoring, leveling
+            systems etc) user engagement with the product increases. Companies such as the Botswana Insurance Company
+            are utilising a mobile game focused on businesses to promote both their products and better spending
+            habits.<br>
+            These practices could be used in more predatory contexts to create damaging habits through the use of
+            Skinner boxes and similar. By conditioning a user, these users could be abused in a similar vein to how some
+            mobile app developers prey on those with poor gambling habits or impatience with microtransactions.<br>
+        </p>
+        <h1>
+            References
+        </h1>
+        <p>
+            https://cxl.com/blog/interactivity-user-engagement/<br>
+            https://www.bunchball.com/gamification
         </p>
     </article>
     <nav class="blogNav"></nav>
