--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -26,6 +26,13 @@
             by Claudio Surmon
         </p>
 
+        <figure>
+            <img src="../images/Ravoire_radio_tower.JPG" alt="Person using Computer" width="800px">
+            <figcaption>
+                Radio tower on a mountain slope in Sur le Mont hamlet, Ravoire village, Martigny-Combe municipality,
+                Switzerland.<br> Image taken from Wikimedia credit: Jacek Rużyczka
+            </figcaption>
+        </figure>
         <p>
             With the current pandemic universities are being urged to close down, however there are a
             significant amount
