--- a/blogs/blog7.html
+++ b/blogs/blog7.html
@@ -20,7 +20,7 @@
     <nav></nav>
     <article>
         <h1>
-            Title
+            Giovanni's Company during the Outbreak
         </h1>
         <p>
             by Giovanni Suzzi
