--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Title
+        Teaching and learning online.
     </title>
 </head>
 
@@ -20,7 +20,7 @@
     <nav></nav>
     <article>
         <h1>
-            Title
+            Teaching and learning online - A practical approach
         </h1>
         <p>
             by Claudio Surmon
