--- a/construction/index.html
+++ b/construction/index.html
@@ -81,6 +81,7 @@
             The mobile oriented menu was removed due to the bodged implementation and new focus on creating a more
             desktop focused webpage. A mobile version may come later
         </p>
+        <h3>Updated WireFrames</h3>
 
         <h3>
             Logo
@@ -103,10 +104,16 @@
             side program (like Node.js) or using php, Github pages also does not support server side programs and as
             such this idea was bust. Cards are entered manually.
         </p>
+        <p>
+            I gave this another bash and managed to find a workaround, by creating an array of objects containing the
+            information needed for each card (the title, subtext, image link, blog link etc), I can then easily
+            manipulate the generated cards in javascript and provide more flexibility. Using this i created a basic page
+            system for the blog index.
+        </p>
 
-    </main>
+        < </main>
 
-    <footer></footer>
+            <footer></footer>
 
 </body>
 
