--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -20,15 +20,15 @@
     <nav></nav>
     <article>
         <h1>
-            Teaching and learning online - A practical approach
+            Teaching and learning online - An auditory approach
         </h1>
         <p>
             by Claudio Surmon
         </p>
         <figure>
-            <img src="" alt="Blank">
+            <img src="../images/Microphone.jpg" alt="Blank" width="800">
             <figcaption>
-                Blank
+                Image taken from Pixnio.com, public domain, credit: Hrayr Movsisyan
             </figcaption>
         </figure>
         <p>
@@ -69,13 +69,18 @@
         <p>
             For those that would need a good hybrid of the two, some form of internet radio with a live chatroom may be
             ideal. A standard HD audio stream is 128kbps and this can be lower if necessary. This means a 2 hour lecture
-            would only consume around 58 MB of data.
+            would only consume around 58 MB of data at most. The chatroom does sacrifice clarity to some extent, as
+            typing a question is slower than just saying it, and can be interpreted incorrectly.
         </p>
 
         <h3>
-            The above assumes that a primarily audio focus, teaching would be further improved by utilising things like
-            video and slide shows.
+            Conclusion
         </h3>
+        <p>
+            Although these solutions would work for someone with similar learning habits to me, the above assumes that a
+            primarily audio focus, teaching would be further improved by utilising things like
+            video and slide shows.
+        </p>
 
     </article>
     <nav class="blogNav"></nav>
