--- a/blogs/blog10.html
+++ b/blogs/blog10.html
@@ -59,7 +59,9 @@
             are utilising a mobile game focused on businesses to promote both their products and better spending
             habits.<br>
             These practices could be used in more predatory contexts to create damaging habits through the use of
-            Skinner boxes and similar. By conditioning a user, these users could be abused in a similar vein to how some
+            Skinner boxes and similar. A skinner box (or Operant conditioning chamber) is a device that conditions a
+            user to do repeated actions on a schedule to recieve some form of reward. By conditioning a user, these
+            users could be abused in a similar vein to how some
             mobile app developers prey on those with poor gambling habits or impatience with microtransactions.<br>
         </p>
         <h1>
