Fixed blog posts

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -36,12 +36,12 @@
         <p>
             “As we may think”, was an essay written in 1945 by Vannevar Bush in which he speculated about the aspects of
             life in an information society. One of the most influential visions he had was of the memex and its use in
-            storing information for ease of access, among some other some other ideas.
+            storing information for ease of access, among some other ideas.
         </p>
         <h2>Vannevar Bush</h2>
         <p>
             Vannevar Bush was an American engineer who headed the office of the U.S. Scientific Research and Development
-            which carried out the research for, among other things, the Manhattan project.
+            which carried out the research for the Manhattan project among other projects.
         </p>
         <h2>The MEMEX</h2>
         <p>
@@ -60,10 +60,10 @@
         </p>
         <p>
             The window on the top of the system that would allow for the user to input longhand notes, photos or
-            articles into the photographic memory is reminiscent of flatbed scanners.
+            articles into the photographic memory is similar to flatbed scanners.
         </p>
         <p>
-            All in all the inventions thought of by Vannevar in this essay are wonderfully archaic in their design, but
+            All in all, the inventions thought of by Vannevar in this essay are wonderfully archaic in their design, but
             beautifully futuristic in their function, it allows us to wonder what technology will be like in another 50
             years.
         </p>
