--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -51,7 +51,7 @@
             nuclear threats (the cold war was still in full swing at the time).
         </p>
         <p>
-            The initial network consisted of only 4 links, between 3 universities and 1 research institute. And from
+            The initial network consisted of only 4 links, between 3 universities and 1 research institution. From
             these small stepping stones, the internet was born.
 
         </p>
