--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -54,8 +54,8 @@
         <h2>Null Island</h2>
         <p>
             A funny occurrence that happens due to poorly designed software, is the seemly existent “null island” at
-            0°N, 0°E in the Gulf of Guinea. Large amounts of photos seem to have been taken at this place as some
-            software would enter (0,0) into the geolocation metatag erroneously
+            0°N, 0°E in the Gulf of Guinea. Large amounts of photos seem to have been taken at Null island. This is
+            caused by some software entering (0,0) into the geolocation metatag erroneously.
         </p>
     </article>
     <nav class="blogNav"></nav>
