--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -34,7 +34,7 @@
             </figcaption>
         </figure>
         <p>
-            With the current pandemic universities are being urged to close down, however there are a
+            As a result of the current pandemic, universities are being urged to close down, however there are a
             significant amount
             of students that cannot access online classes due to lack of internet. This allows for one to
             speculate
@@ -47,7 +47,7 @@
 
         <p>
             As nice as 1080p60 video lectures are, they absolutely chew through bandwidth. Each individual
-            stream using
+            stream uses
             12Mbps. For semi-apocalyptic situations this could prove devastating to try and maintain.
         </p>
 
@@ -56,9 +56,9 @@
         </h2>
 
         <p>
-            Having tiny files is great, but with people that have no internet it would defeat the purpose.
-            Although some
-            form of communication infrastructure does need to be inplace.
+            Having tiny files is great, but for people that have no internet access it would defeat the purpose.
+            As such some form of communication infrastructure does need to be inplace. The assumption will be made that
+            for some reason no internet access is possible. This is unrealistic but ideal for speculation.
         </p>
 
         <h2>
@@ -70,9 +70,11 @@
             assumed
             technology people could have access to, if people have a laptop and software definded radio, people
             can use
-            WinLink (or something similar). Which would allow for email and file transfer over HF radio.
+            WinLink (or something similar). This would allow for email and file transfer over HF radio. A software
+            defined radio is a relatively small device that plugs directly into a computer and allows the computer to
+            access a broad slice of the radio spectrum.
             However, the
-            data speeds are nothing to be impressed at, at 75 to 9600 bits its not breaking any records, so tiny
+            data speeds are nothing to write home about, at 75 to 9600 bits its not breaking any records, so tiny
             files
             is a must. Using plaintext would be necessary.
         </p>
@@ -82,7 +84,8 @@
         </h2>
 
         <p>
-            Utilising telecommunications infrastructure, the university could deploy a system to have vocal data
+            A combination of technologies could allow for the transmission of podcasts. Utilising telecommunications
+            infrastructure, the university could deploy a system to have vocal data
             containing voice recordings of lectures broadcast through conference calls, that software on a phone
             could
             then decompress. (Otherwise the phone call would be as long as the lecture). This would allow for
@@ -95,7 +98,7 @@
         </h2>
 
         <p>
-            Using updated technology from the 80’s we could make a system to use phone systems to provide crude
+            Using updated technology from the 80’s we could use phone systems to provide crude
             internet
             access. If the system was more automated and instead of waiting for a user to browse for what they
             need,
@@ -114,11 +117,11 @@
         <p>
             For images that need to be transferred, using cold-war era technology could prove useful. As it
             would allow
-            higher resolution images to be carried while keeping bandwidth usage low, as it is possible to get
+            higher resolution images to be carried while keeping bandwidth usage low. It is possible to get
             away with
             as little as 3kHz, so pushing up to more commercial bands (in the mega or even gigahertz range)
             would allow
-            far larger images at faster transfer speeds.
+            far larger images at faster transfer speeds. The file can take seconds to minutes to transfer however.
         </p>
 
         <p>
