--- a/about/index.html
+++ b/about/index.html
@@ -39,32 +39,37 @@
 
         <h2>Early life and Career</h2>
         <p>
-            Giovanni Suzzi is a 54 year old man, born and raised on the outskirts of Trieste in the Fruili-Venezia Giula
-            region.
+            I am Giovanni Suzzi a 54 year old man, born and raised on the outskirts of Trieste in the Fruili-Venezia
+            Giula region. Born on the 24th of May 1966.
         </p>
         <p>
-            At 18 he joined the Italian armed forces (Forze Armate Italine) in which he served for 4 years in the
-            infantry. He rose to the rank of Caporale maggiore (platoon leader).
+            At 18,I joined the Italian armed forces (Forze Armate Italine) in which I served for 4 years in the
+            infantry. I rose to the rank of Caporale maggiore (platoon leader) during this time.
         </p>
         <p>
-            He found out about better prospects in the southern african mercenary industry, giving him the opportunity
+            I had found out about better prospects in the southern african mercenary industry, giving me an opportunity
             to uproot and move down to the South Africa during the later stages of the South African Border war. Shortly
-            after joining as a mercenary, the company was dissolved due to the ending of the war in which they had been
-            primarily participating. This left Giovanni stranded halfway across the world.
+            after I joined as a mercenary, the company was dissolved due to the ending of the war in which they had been
+            primarily participating. This left me stranded halfway across the world with few meaningful contacts and the
+            small amount of money I had had in reserves.
         </p>
         <p>
-            During this time he met the love of his life,
+            During this time I met the love of my life, Kaybi, who helped me redirect and focus his life. And without
+            her I would never have found my footing again.
         </p>
         <p>
-            Not one to take a fight laying down, he began exploring the various industries in South Africa, eventually
-            settling into the Computer Industry around 2000, where he has been ever since. Primarily working
-            backend-developmental software engineering jobs. His military background helping land him jobs, from his
-            discipline allowing him to work harder than the average person, to incredible leadership skills. However,
-            his regimented mindset made it difficult to adapt to change on grand scales.
+            I began exploring the various industries in South Africa, eventually
+            settling into the Computer Industry around 2000 (all thanks to Kaybi), where I have been ever since.
+            Primarily working
+            backend-developmental software engineering jobs. My military background helping me land jobs, from my
+            discipline allowing me to work harder than the average person, to incredible leadership skills. However,
+            my regimented mindset made it difficult to adapt to change on grand scales, this Kaybi has had to help a lot
+            with.
         </p>
         <p>
-            Eventually he went on to produce his own software engineering company and has recently began web
-            development. The result of this expansion is the website you're currently reading.
+            Eventually I went on to produce my own software engineering company in the Summer of 2015(Suzzi Inc. Ltd.)
+            and I have recently began experimenting with web development. The result of this expansion is the website
+            you're currently reading.
         </p>
     </main>
 
