Added page numbers

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -22,10 +22,17 @@
 
     <nav></nav>
 
-    <main class="navContainer">
-        <button id="prevButton" onclick="previousPage()"> &#8249</button>
-        <div class="gridContainer"></div>
-        <button id="nextButton" onclick="nextPage()"> &#8250</button>
+    <main>
+        <h1>
+            Blog Index
+        </h1>
+        <div class="navContainer">
+            <button id="prevButton" onclick="previousPage()"> &#8249</button>
+            <div class="gridContainer">
+            </div>
+            <button id="nextButton" onclick="nextPage()"> &#8250</button>
+        </div>
+        <p style="text-align: center !important;" class="BlogIndexNumber"></p>
     </main>
 
     <footer></footer>
