Shuffled Blog Posts

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -22,7 +22,7 @@
         <h1>
             As we may retroactively think.
         </h1>
-        <p>
+        <p id="info">
             by Claudio Surmon
         </p>
         <figure>
