--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -22,7 +22,7 @@
         <h1>
             The Internet's First Hello World
         </h1>
-        <p>
+        <p id="info">
             by Claudio Surmon
         </p>
 
