--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -5,11 +5,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
-    <meta name="desciption" content="Blog about Giovanni's Introduction">
+    <meta name="desciption" content="Blog about Semantic Markup">
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        cout &lt;&lt; "Hello World";
+        Semantics of Semantic Markup
     </title>
 </head>
 
@@ -20,21 +20,26 @@
     <nav></nav>
     <article>
         <h1>
-            cout &lt;&lt; "Hello World";
+            Semantics of Semantic Markup
         </h1>
-        <p>
-            by Giovanni Suzzi
+        <p id="info">
+            by Claudio Surmon
         </p>
 
-        <figure>
-            <img src="../images/PlaceHolder.png" alt="Giovanni at war" width="640" height="458">
-            <figcaption>
-                Giovanni in the italian armed forces
-                </br>
-                Personal Photograph, private use
-            </figcaption>
-        </figure>
         <p>
+            Semantics is relating to meaning in language or logic. Semantic markup extends on this idea, by allocating
+            meaning to the various tags used in a markup language such as HTML. Although visually, a lot of tags seem
+            similar or will have the similar properties, on a lower level they are different.
+        </p>
+        <h2>So what?</h2>
+        <p>Primarily these specialised tags are for bots or programs that assist people (like screen readers). It
+            allows for them to understand what various parts of a webpage are and use the information accordingly. It
+            helps make webpages that both humans and machines can read more easily.
+        </p>
+        <p>
+            A common example is the tags “div” and “span”, these tags are effectively default templates for formatting,
+            however, it does not say anything about the contents contained therein. So better tags to use would be like
+            “article” or “header” (provided it was appropriate).
 
         </p>
     </article>
