--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -5,11 +5,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
-    <meta name="desciption" content="Blog about Semantic Markup">
+    <meta name="desciption" content="Blog about Meta-data">
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Semantics of Semantic Markup
+        Meta Meta data blog post;
     </title>
 </head>
 
@@ -20,31 +20,46 @@
     <nav></nav>
     <article>
         <h1>
-            Semantics of Semantic Markup
+            Meta Meta-data blog post
         </h1>
-        <p>
+        <p id="info">
             by Claudio Surmon
         </p>
 
+        <figure>
+            <img src="../images/Henry-Cat2.jpg" alt="Henry the cat" width="512">
+            <figcaption>
+                An example of a photograph containing meta-tags showing Henry the cat.
+                </br>
+                from Claudio Surmon, private use
+            </figcaption>
+        </figure>
         <p>
-            Semantics is relating to meaning in language or logic. Semantic markup extends on this idea, by allocating
-            meaning to the various tags used in a markup language such as HTML. Although visually, a lot of tags seem
-            similar or will have the similar properties, on a lower level they are different.
-        </p>
-        <h2>So what?</h2>
-        <p>Primarily these specialised tags are for bots or programs that assist people (like screen readers). It
-            allows for them to understand what various parts of a webpage are and use the information accordingly. It
-            helps make webpages that both humans and machines can read more easily.
+            The Latin origin word, meta, is used to describe something that is self-referential, and data is a discrete
+            piece of information. Combine these definitions and you get self-referential information, or information
+            about information.
         </p>
         <p>
-            A common example is the tags “div” and “span”, these tags are effectively default templates for formatting,
-            however, it does not say anything about the contents contained therein. So better tags to use would be like
-            “article” or “header” (provided it was appropriate).
+            In a computing context, meta-tags and meta-data is the information that a webpage stores about the
+            information stored within the page. These can include, but are in no way limited to, the character set used
+            by the page, instructions for bots, the owner and various other information the user will not normally see.
+        </p>
+        <h2>Are they anywhere else?</h2>
+        <p>
 
+            Meta-tags are used elsewhere in the computing world, not just for websites. A trivial example being digital
+            photos, contained within the data are meta-tags that store the aperture, focal length, what white balance
+            was used, what ISO, exposure time, location data and more.
+        </p>
+        <h2>Null Island</h2>
+        <p>
+            A funny occurrence that happens due to poorly designed software, is the seemly existent “null island” at
+            0°N, 0°E in the Gulf of Guinea. Large amounts of photos seem to have been taken at Null island. This is
+            caused by some software entering (0,0) into the geolocation metatag erroneously.
         </p>
     </article>
     <nav class="blogNav"></nav>
-    <footer> </footer>
+    <footer></footer>
 </body>
 
 </html>
