--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -5,136 +5,38 @@
     <link href="../css/stylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
-    <meta name="desciption" content="Blog about Alternative Communication Ideas">
+    <meta name="desciption" content="Blog template">
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Alternative communications ideas
+        Giovanni's Company during the Outbreak
     </title>
 </head>
 
 <body onload="insertElements(2,true)">
 
     <header></header>
+
     <nav></nav>
     <article>
-
         <h1>
-            Alternative Communication Ideas - Speculation
+            Giovanni's Company during the Outbreak
         </h1>
-        <p>
-            by Claudio Surmon
+        <p id="info">
+            by Giovanni Suzzi
         </p>
-
         <figure>
-            <img src="../images/Ravoire_radio_tower.JPG" alt="Person using Computer" width="800px">
+            <img src="" alt="Blank">
             <figcaption>
-                Radio tower on a mountain slope in Sur le Mont hamlet, Ravoire village, Martigny-Combe municipality,
-                Switzerland.<br> Image taken from Wikimedia credit: Jacek Rużyczka
+                Blank
             </figcaption>
         </figure>
         <p>
-            As a result of the current pandemic, universities are being urged to close down, however there are a
-            significant amount
-            of students that cannot access online classes due to lack of internet. This allows for one to
-            speculate
-            about alternative methods for communicating over long distance.
-        </p>
-
-        <h2>
-            Problem 1: Data
-        </h2>
-
-        <p>
-            As nice as 1080p60 video lectures are, they absolutely chew through bandwidth. Each individual
-            stream uses
-            12Mbps. For semi-apocalyptic situations this could prove devastating to try and maintain.
-        </p>
-
-        <h2>
-            Problem 2: Internet
-        </h2>
-
-        <p>
-            Having tiny files is great, but for people that have no internet access it would defeat the purpose.
-            As such some form of communication infrastructure does need to be inplace. The assumption will be made that
-            for some reason no internet access is possible. This is unrealistic but ideal for speculation.
-        </p>
-
-        <h2>
-            Solution 1: HF radio
-        </h2>
-
-        <p>
-            A potential solution would be the usage of various long range radio broadcasts. Depending on the
-            assumed
-            technology people could have access to, if people have a laptop and software definded radio, people
-            can use
-            WinLink (or something similar). This would allow for email and file transfer over HF radio. A software
-            defined radio is a relatively small device that plugs directly into a computer and allows the computer to
-            access a broad slice of the radio spectrum.
-            However, the
-            data speeds are nothing to write home about, at 75 to 9600 bits its not breaking any records, so tiny
-            files
-            is a must. Using plaintext would be necessary.
-        </p>
-
-        <h2>
-            Solution 2: Telephone + Recording software.
-        </h2>
-
-        <p>
-            A combination of technologies could allow for the transmission of podcasts. Utilising telecommunications
-            infrastructure, the university could deploy a system to have vocal data
-            containing voice recordings of lectures broadcast through conference calls, that software on a phone
-            could
-            then decompress. (Otherwise the phone call would be as long as the lecture). This would allow for
-            podcasts
-            to be sent.
-        </p>
-
-        <h2>
-            Solution 3: Dial-Up internet or a similar system.
-        </h2>
-
-        <p>
-            Using updated technology from the 80’s we could use phone systems to provide crude
-            internet
-            access. If the system was more automated and instead of waiting for a user to browse for what they
-            need,
-            having the system automatically grab and dump the files on the system and disconnect would help with
-            limiting bandwidth usage. Assuming the same speed of dail up, 56 kbit/s, a pdf of 1-5MB would take
-            11
-            minutes. However using a system similar to latex where the data is plaintext would allow for far
-            shorter
-            times, in the range of seconds.
-        </p>
-
-        <h2>
-            Solution 4: Slow scan television
-        </h2>
-
-        <p>
-            For images that need to be transferred, using cold-war era technology could prove useful. As it
-            would allow
-            higher resolution images to be carried while keeping bandwidth usage low. It is possible to get
-            away with
-            as little as 3kHz, so pushing up to more commercial bands (in the mega or even gigahertz range)
-            would allow
-            far larger images at faster transfer speeds. The file can take seconds to minutes to transfer however.
-        </p>
-
-        <p>
-            Software could maintain the transmission times, perhaps a catalog for the day’s transmissions would
-            be sent
-            out using one of the previous methods. Then if a student needs a specific file, the system would
-            tune in at
-            the same time to retrieve the information and generate the image.
-
+            Text
         </p>
     </article>
     <nav class="blogNav"></nav>
-    <footer></footer>
+    <footer> </footer>
 </body>
 
 </html>
