added json file for blogs

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
     <meta name="desciption" content="About page">
     <meta name="author" content="Claudio Surmon">
 
-    <title>Suzzi - Home</title>
+    <title>Suzzi - About</title>
 </head>
 
 <body onload="insertElements(1)">
