--- a/blogs/blog-template.html
+++ b/blogs/blog-template.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
     <link href="../css/stylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
-    <meta name="desciption" content="Blog template">
+    <meta name="desciption" content="Template">
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Title
+        Template
     </title>
 </head>
 
-<body onload="insertElements(2)">
+<body onload="insertElements(2,true)">
 
     <header></header>
 
     <nav></nav>
     <article>
         <h1>
-            Title
+            Template
         </h1>
-        <p>
+        <p id="info">
             by Claudio Surmon
         </p>
         <figure>
-            <img src="" alt="Blank">
+            <img src="../images/PlaceHolder.png" alt="PlaceHolder">
             <figcaption>
-                Blank
+                Vannevar Bush at a desk
+                </br>
+                From "OEM Defence" during World War 2, United States Treasury, public domain.
             </figcaption>
         </figure>
         <p>
-            Text
+
         </p>
     </article>
-    <footer>
-
-        <a href="blog2.html"> &#129070</a>
-    </footer>
+    <nav class="blogNav"></nav>
     <footer> </footer>
 </body>
 
