--- a/contact/index.html
+++ b/contact/index.html
@@ -33,6 +33,16 @@
             </br>
             &#9993; info@suzzi.co.za
         </p>
+        <h2>
+            Sales Inquires
+        </h2>
+        <p style="text-align: center; font-size: 1.25em;">
+            &#9743; 011-123-1235
+            </br>
+            &#9990; 089-076-1255
+            </br>
+            &#9993; sales@suzzi.co.za
+        </p>
 
     </main>
 
